# rust-central

./: Cargo.toml  README.md  config.json
config_static/: Cargo.toml
config_static/src/: lib.rs
tester/: Cargo.toml
tester/src/: main.rs
