[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config_static = { path = "../config_static" }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
once_cell = "1.16"
